# trustystack-rust

./: .env  .exmaple.env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  diesel.toml  entrypoint.sh  example.env
.github/workflows/: doc-gen.yml  rust-tests.yml  trigger-infra.yml
data/csv/: categories.csv  cpu_specs.csv  gpu_specs.csv  manufacturers.csv  memory_specs.csv  parts.csv  storage_specs.csv
migrations/2024-08-28-014654_create_cpu_table/: down.sql  up.sql
migrations/2024-10-01-003759_create_parts_and_configurations/: down.sql  up.sql
migrations/2024-10-02-182111_create_users/: up.sql
migrations/2024-10-02-182125_create_manufacturers_and_categories/: down.sql  up.sql
migrations/2024-10-02-182135_create_parts/: down.sql  up.sql
migrations/2024-10-02-182142_create_part_specifications/: down.sql  up.sql
migrations/2024-10-03-000000_create_auth_tables/: down.sql  up.sql
migrations/2024-10-04-182155_create_configurations/: down.sql  up.sql
rust/src/: lib.rs
src/: data_import.rs  graphql_handler.rs  lib.rs  main.rs  migration.rs  schema.rs
src/diesel_schema/: configurations.rs  mod.rs  parts.rs  users.rs
src/diesel_schema/parts/: cpu.rs  schema.rs
src/graphql_schema/: context.rs  mod.rs  root_query.rs  schema.rs  service.rs
src/graphql_schema/parts/: category_graphql.rs  cpu_spec_graphql.rs  gpu_spec_graphql.rs  manufacturer_graphql.rs  memory_spec_graphql.rs  mod.rs  part_graphql.rs  storage_spec_graphql.rs
src/graphql_schema/prebuilt/: mod.rs  query.rs  spec.rs
src/graphql_schema/queries/: categories_queries.rs  manufacturers_queries.rs  mod.rs  parts_queries.rs
src/graphql_schema/service/: query.rs
src/graphql_schema/software/: query.rs
src/graphql_schema/users/: query.rs  types.rs
src/middleware/: auth.rs  logging.rs  mod.rs  timing.rs
src/models/: mod.rs
src/schema/: mod.rs  service.rs  software.rs
src/types/: errors.rs  wrappers.rs
tests/: data_import_tests.rs  integration_test.rs  migration_tests.rs  utils.rs
(+13 files in other folders)
