[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
juniper = "0.15"
juniper_actix = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-rt = "2"
actix-web = "4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

