[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
juniper = "0.15"
juniper_actix = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2", "numeric"] }
dotenv = "0.15"
bigdecimal = "0.3"
env_logger = "0.9"
log = "0.4"

[dev-dependencies]
actix-rt = "2"
actix-web = "4"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

