[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
juniper = { version = "0.15", features = ["chrono"] }
juniper_actix = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2", "numeric", '64-column-tables', 'serde_json'] }
serde_json = "1.0"
diesel_migrations = "2.0.0"
csv = "1.1"
dotenv = "0.15"
bigdecimal = { version = "0.4.5", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
actix-cors = "0.7.0"

[dev-dependencies]
actix-rt = "2"
actix-web = "4"
serial_test = "0.5"
tempfile = "3.3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
